# tplt

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: arg_parser.hpp  data_reader.hpp  data_reader_test.cpp  heatmap_builder.hpp  heatmap_builder_test.cpp  heatmap_renderer.hpp  main.cpp  test_framework.hpp
test_data/: README.md  comma_delimited.txt  pipe_delimited.txt  space_delimited.txt  with_header.csv
tests/: data_reader_test.cpp  heatmap_builder_test.cpp
